fix khushi's card text color

--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
                                 <img class="activator" src = "images\sabuwala.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="card-title activator red-text darken-4 open-sans">Khushi Sabuwala<i class="material-icons right">keyboard_arrow_up</i></span>
+                                <span class="card-title activator red-text text-darken-4 open-sans">Khushi Sabuwala<i class="material-icons right">keyboard_arrow_up</i></span>
                                 <p class = "open-sans light">Jazz Band Director</p>
                             </div>
                             <div class="card-reveal">
