--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                         <div class="card" id = "producer">
                             <!--Photo of the producer-->
                             <div class="card-image">
-                                <img class="activator" src = "images\liu.JPG">
+                                <img class="activator" src = "images\liu.jpg">
                             </div>
                             <!--This is what will show on the card before the user clicks on it-->
                             <div class="card-content">
