fix images part 2
make all image file extensions lower case in code

--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
                 <iframe src="https://drive.google.com/embeddedfolderview?id=1J5ne6oSQf2zAAA-KcGm54GgZqio0MEyc#grid" style="width:100%; height:600px; border:0;"></iframe>
             </div>
             <div class="parallax-container">
-                <div class="parallax"><img src="images/bee.JPG"></div>
+                <div class="parallax"><img src="images/bee.jpg"></div>
             </div>
             <!-- container to make content not go all the way to the edge of the window -->
             <div class = "container">
@@ -71,7 +71,7 @@
                 <iframe src="https://drive.google.com/embeddedfolderview?id=10jrg3lNIdvVLcb5k4JrEzHD5NjyOZb7U#grid" style="width:100%; height:600px; border:0;"></iframe>
             </div>
             <div class="parallax-container">
-                <div class="parallax"><img src="images/little.JPG"></div>
+                <div class="parallax"><img src="images/little.jpg"></div>
             </div>
             <!-- container to make content not go all the way to the edge of the window -->
             <div class = "container">    
