made all image file names lowercase

--- a/auditions.html
+++ b/auditions.html
@@ -57,7 +57,7 @@
                 </div>
                 <!-- div with id "audition-info" for the purpose of easily toggling between upcoming auditions and no upcoming auditions (more info in style.css), this one shows page info about the upcoming auditions -->                
                 <div id="audition-info">
-                    <img src="images/ffLogo.jpg" width=100%>
+                    <img src="images/fflogo.jpg" width=100%>
                     <h3 class = "fascinate center-align red-text text-darken-4"><strong>Freaky Friday</strong></h3>
                     <h5 class = "open-sans">Auditions will be held on <strong>Wednesday 12/18</strong> and <strong>Thursday 12/19</strong> after school in <strong>Room 110</strong>. <!-- link to audition signup spreadsheet --><i><a href="https://docs.google.com/spreadsheets/d/13yWAlRNSZux7i0SaF5tcPHMBb62CmwweQ9xWEJqPL0U" target="_blank" class = "red-text text-darken-4"><b>Click here</b></a></i> to sign up! Make sure you <strong>INCLUDE LINKS</strong> for your karaoke audition tracks. If applicable, please also specify when you want us to start/stop your track in the notes section.</h5>
                     <h5>If you <strong>absolutely cannot make it</strong> to an after school audition, we will be holding a limited number of auditions during lunch on <strong>Wednesday 12/18</strong>. <i>If you are able to make it to the after school ones, please sign up for those,</i> even if you have to leave early. Just let us know the day of if this is the case so that we can get you in earlier.</h5>
