--- a/upcoming-shows.html
+++ b/upcoming-shows.html
@@ -55,7 +55,7 @@
                     <h4 class = "open-sans">Come see HTHS PAC's production of...</h4>
                     <h3 class = "fascinate red-text text-darken-4">Freaky Friday!</h3>
                     <br>
-                    <img src="images/ffAd.png" class="center" style="width: 50vw;">
+                    <img src="images/ffad.png" class="center" style="width: 50vw;">
                 </div>
                 <!-- div with id "no-shows" for the purpose of easily toggling between an upcoming show and no upcoming shows (more info in style.css), this one shows a message to show if there are no upcoming shows-->                
                 <div id="no-shows">
