add page titles

--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- page title -->
+        <title>HTHS PAC - Gallery</title>
         <!--Import custom CSS stylesheet-->
         <link href = "style.css" type = "text/css" rel = "stylesheet">
         <!--Import Google Icon Font-->
