--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- page title -->
+        <title>HTHS PAC - About Us</title>
         <!--Import custom CSS stylesheet-->
         <link type = "text/css" rel = "stylesheet" href = "style.css">
         <!--Import Google Icon Font-->
