make mailing list text link to mailing list

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h5 class = "open-sans">Sign up for our mailing list to stay updated on our latest shows and auditions!</h5>
                 <br>
                 <!-- embeds the Google form to sign up for the PAC mailing list -->
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScj_g63SF3aF8qmJqkxkhcxRCuEOndvSKh1UH1jBIccjye1CA/viewform?embedded=true" width="800" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe id="mailing-list" src="https://docs.google.com/forms/d/e/1FAIpQLScj_g63SF3aF8qmJqkxkhcxRCuEOndvSKh1UH1jBIccjye1CA/viewform?embedded=true" width="800" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </main>
         <!-- import jQuery -->
