--- a/upcoming-shows.html
+++ b/upcoming-shows.html
@@ -62,7 +62,7 @@
                 <!-- div with id "no-shows" for the purpose of easily toggling between an upcoming show and no upcoming shows (more info in style.css), this one shows a message to show if there are no upcoming shows-->                
                 <div id="no-shows">
                     <h3 class = "fascinate red-text text-darken-4">Upcoming Shows</h3>
-                    <h4 class = "open-sans">Sorry, <strong>there are no upcoming shows at this time.</strong> Please check again later, or sign up for our mailing list if you want to be updated as soon as we post new show information!</h4>
+                    <h4 class = "open-sans">Sorry, <strong>there are no upcoming shows at this time.</strong> Please check again later, or sign up for our <a href="index.html#mailing-list">mailing list</a> if you want to be updated as soon as we post new show information!</h4>
                 </div>
             </div>
         </main>
