--- a/auditions.html
+++ b/auditions.html
@@ -55,7 +55,7 @@
                 <p class = "fascinate red-text text-darken-4 center-align big">Auditions</p>
                 <!-- div with id "no-auditions" for the purpose of easily toggling between upcoming auditions and no upcoming auditions (more info in style.css), this one shows a message saying there are no upcoming auditions -->
                 <div id="no-auditions">
-                    <h4 class = "open-sans">Sorry, <strong>there are no auditions at this time.</strong> Please check again later, or sign up for our mailing list if you want to be updated as soon as we post new audition information!</h4>
+                    <h4 class = "open-sans">Sorry, <strong>there are no auditions at this time.</strong> Please check again later, or sign up for our <a href="index.html#mailing-list">mailing list</a> if you want to be updated as soon as we post new audition information!</h4>
                 </div>
                 <!-- div with id "audition-info" for the purpose of easily toggling between upcoming auditions and no upcoming auditions (more info in style.css), this one shows page info about the upcoming auditions -->                
                 <div id="audition-info">
