copy updated website from other repo
- put html files in folder
- put css file in folder
- add content to rest of officer cards

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <!-- page title -->
         <title>HTHS PAC - Home</title>
         <!--Import custom CSS stylesheet-->
-        <link href = "style.css" type = "text/css" rel = "stylesheet">
+        <link href = "cssfiles/style.css" type = "text/css" rel = "stylesheet">
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="materialize-v1.0.0\materialize\css\materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="materialize-v1.0.0/materialize/css/materialize.min.css"  media="screen,projection"/>
         <!--Import social media icons for footer-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!--Import FontAwesome Kit for high tech logo icon in footer-->
@@ -28,25 +28,26 @@
                 <!--Since this is the home page, the "active" class is used, making the link appear to already be clicked-->
                 <li class="active"><a class="waves-effect open-sans" href="#!">HOME</a></li>
                 <!--Link to about page-->
-                <li><a class="waves-effect open-sans" href="about.html">ABOUT</a></li>
+                <li><a class="waves-effect open-sans" href="otherhtmlfiles/about.html">ABOUT</a></li>
                 <!--Link to gallery page-->
-                <li><a class="waves-effect open-sans" href="gallery.html">GALLERY</a></li>
+                <li><a class="waves-effect open-sans" href="otherhtmlfiles/gallery.html">GALLERY</a></li>
                 <!--Link to upcoming shows page-->
-                <li><a class="waves-effect open-sans" href="upcoming-shows.html">UPCOMING SHOWS</a></li>
+                <li><a class="waves-effect open-sans" href="otherhtmlfiles/upcoming-shows.html">UPCOMING SHOWS</a></li>
                 <!--Link to auditions page-->
-                <li><a class="waves-effect open-sans" href="auditions.html">AUDITIONS</a></li>
+                <li><a class="waves-effect open-sans" href="otherhtmlfiles/auditions.html">AUDITIONS</a></li>
             </ul>
             <nav>
                 <!--Create top navigation banner/bar-->
                 <div class="nav-wrapper red darken-4">
                     <!--Site title-->
-                    <a href="index.html" class="brand-logo center fascinate big">HTHS PAC</a>
+                    <a href="#!" class="brand-logo center fascinate big">HTHS PAC</a>
                     <!--Creates menu icon in top left corner, which  shows the side navigation panel when clicked-->
                     <a href="#" data-target="slide-out" class = "sidenav-trigger show-on-large"><i class = "material-icons">dehaze</i></a>
                 </div>
             </nav>
         </header>
         <main>
+            <!--Creates home page image with parallax scrolling-->
             <div class="parallax-container">
                 <div class="parallax"><img src="images/home.png"></div>
             </div>
@@ -61,7 +62,7 @@
         <!-- import jQuery -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <!-- import Materialize -->
-        <script src = "materialize-v1.0.0\materialize\js\materialize.min.js"></script>
+        <script src = "materialize-v1.0.0/materialize/js/materialize.min.js"></script>
         <script>
             $(document).ready(function(){
                 /*Initialize collapsible side navigation panel*/
