edit styling for no auditions message

--- a/otherhtmlfiles/auditions.html
+++ b/otherhtmlfiles/auditions.html
@@ -52,7 +52,7 @@
                 <div class="parallax"><img src="../images/auditions.png"></div>
             </div>
             <!-- container to make content not go all the way to the edge of the window -->
-            <div class = "container">
+            <div class = "container center">
                 <p class = "fascinate red-text text-darken-4 center-align big">Auditions</p>
                 <!-- div with id "no-auditions" for the purpose of easily toggling between upcoming auditions and no upcoming auditions (more info in style.css), this one shows a message saying there are no upcoming auditions -->
                 <div id="no-auditions">
